cargo-features = ["profile-rustflags"]

[package]
name = "webp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
image = "0.25.5"
libwebp-sys = "0.12.1"
rayon = "1.10.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
rustflags = ["-C", "target-cpu=native"]

